- Improved: Use <div> not <span> for attribute containers (Ticket #203)
- Improved: Only create cart in database if necessary (will save a lot of auto_increment IDs)
- Improved: Blair has rewritten Authorize.net's payment calls
- Improved: Related products & quick products now use the product tree and allow for variant selection
- Fixed start & stop publishing dates not working
- Fixed Authorize.net failed transaction bug
- Removed pre-0.1 update code from runonce.php

Version 0.2.7 (2011-03-??)
------------------------------
- Added support for language switching on checkout page (changelanguage extension)
- Added support for language switching on order details page (changelanguage extension)
- Improved ajax overlay position and transparency
- Fixed potential SQL injection in product collection
- Fixed CSS classes in checkout review and order details

Version 0.2.6 (2011-03-01)
------------------------------
- Added label for toggle button in product tree
- Added missing 'enabled' label to tl_iso_shipping_options (Ticket #373)
- Added support for language switching on product reader page (changelanguage extension)
- Added: automatically disable page cache for sites with customer-related modules such as Cart (Ticket #392)
- Improved: Check isDefaultBilling/isDefaultShipping on first checkout
- Improved: Label for payment method is no longer mandatory (will use name if not set)
- Improved: Made text fields for meta description & meta keywords smaller (Ticket #386)
- Improved: Added javascript confirmation before deleting address (Ticket #328)
- Improved: Use generic labels for redirecting to payment provider on checkout
- Improved order PDF printing, fixed several bugs (Ticket #376, Ticket #356)
- Fixed ##newsletter.css## in HTML email
- Fixed issue with simple tokens in mail template subject
- Fixed issue with HTML in plain text emails
- Fixed CSS classes for new address fields in checkout module
- Fixed publish toggle not working for non-admins