@@ -1000,5 +1000,13 @@ class Isotope extends Controller
 
 		return $label;
 	}
+	
+	
+	/**
+	 * These functions need to be public for Models to access them
+	 */
+	public function replaceInsertTags($strBuffer, $blnCache=false) { return parent::replaceInsertTags($strBuffer, $blnCache); }
+	public function convertRelativeUrls($strContent, $strBase='', $blnHrefOnly=false) { return parent::convertRelativeUrls($strContent, $strBase, $blnHrefOnly); }
+	public function generateImage($src, $alt='', $attributes='') { return parent::generateImage($src, $alt, $attributes); }
 }
 
