@@ -39,6 +39,7 @@ Version 0.3.beta1
 - Improved: Only create cart in database if necessary (will save a lot of auto_increment IDs)
 - Improved: Blair has rewritten Authorize.net's payment calls
 - Improved: Related products & quick products now use the product tree and allow for variant selection
+- Improved: All product collections can be printed to HTML/PDF
 - Fixed start & stop publishing dates not working
 - Fixed Authorize.net failed transaction bug
 - Removed pre-0.1 update code from runonce.php
